--- a/09 loja/css/style.css
+++ b/09 loja/css/style.css
@@ -248,10 +248,11 @@ h1 {
 .nav-list {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 30px;
 }
 
 .nav-list li a {
+  font-size: 18px;
   color: white;
   text-decoration: none;
   font-weight: bold;
